# goosebit

./: .djlintrc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yaml  404.html  Dockerfile  README.md  alembic.ini  biome.json  conftest.py  docker-compose.yml  goosebit.yaml  index.html  logging_config.yaml  main.py  mkdocs.yml  pyproject.toml  sample_data.py  settings.yaml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker.yml  e2e-tests.yml  gh-pages.yml  issue-milestone-on-tag-remove.yml  issue-milestone-on-tag.yml.yml  milestone-on-tag.yml  pr-milestone-on-tag-remove.yml  pr-milestone-on-tag.yml  pr-run-tests.yml  python-publish.yml  release.yml  scorecard.yml  unit-tests.yml  wip.yml
development/: index.html
docker/: Dockerfile  aerich.toml  dev.dockerfile  docker-compose-dev.yml
docker/demo/: docker-compose.yml
docker/demo/device/: config  entrypoint.sh  hwrevision  myscript.py  swupdate.cfg
docker/demo/nginx/: site.conf
docs/: development.md  goosebit_forwarded_header.md  goosebit_simple_stats.md  index.md  quick_start.md
e2e/: Dockerfile  docker-compose.yml  goosebit.yaml  pytest.ini  utils.py
e2e/docker/auth_server/: Dockerfile  server.py
e2e/docker/goosebit/: Dockerfile  README.md  goosebit-external-auth-bearer.yaml  goosebit-external-auth.yaml  goosebit.yaml
e2e/docker/swupdate/: Dockerfile  entrypoint.sh  supervisord.conf
e2e/external_auth/: docker-compose-bearer.yml  docker-compose-invalid.yml  docker-compose.yml
e2e/external_auth/tests/: test_e2e_external_auth.py  test_e2e_external_auth_bearer_token.py  test_e2e_external_auth_invalid_token.py
e2e/s3/: Dockerfile  aerich.toml  docker-compose.yml  update.swu
e2e/s3/swupdate/: Dockerfile  supervisord.conf
e2e/s3/tests/: test_e2e_s3.py
e2e/swupdate/: Dockerfile  entrypoint.sh  swupdate.cfg
e2e/tests/: test_e2e_s3.py
example_plugin/: pyproject.toml
example_plugin/example_plugin/: __init__.py
example_plugin/example_plugin/api/: routes.py
example_plugin/example_plugin/api/v1/: routes.py
example_plugin/example_plugin/api/v1/example/: responses.py  routes.py
example_plugin/example_plugin/schema/: __init__.py  show.py
example_plugin/example_plugin/settings/: __init__.py  schema.py
example_plugin/example_plugin/ui/: __init__.py  routes.py
example_plugin/example_plugin/ui/bff/: __init__.py
example_plugin/example_plugin/ui/bff/example/: routes.py
example_plugin/example_plugin/ui/static/js/: example.js
example_plugin/example_plugin/ui/templates/: __init__.py  example.html.jinja
examples/: docker-compose.yml
examples/example_plugin/: README.md  pyproject.toml
examples/example_plugin/example_plugin/: __init__.py  api.py  ui.py
examples/example_plugin/example_plugin/api/: routes.py
examples/example_plugin/example_plugin/static/js/: graph.js
examples/example_plugin/example_plugin/templates/: __init__.py  graph.html
examples/example_plugin/example_plugin/templates/example_plugin/: graph.html
examples/example_plugin/example_plugin/ui/: routes.py
examples/nginx/: site.conf
goosebit/: __init__.py  db.py  device_manager.py  misc.py  models.py  permissions.py  settings.py  updates.py  uri.py
goosebit/api/: devices.py  download.py  firmware.py  helper.py  responses.py  rollouts.py  routes.py
goosebit/api/devices/: models.py  requests.py  responses.py  routes.py  schema.py
goosebit/api/download/: __init__.py
goosebit/api/firmware/: models.py  requests.py  responses.py  routes.py  schema.py
goosebit/api/rollouts/: models.py  requests.py  responses.py  routes.py  schema.py
goosebit/auth/: __init__.py  azure.py  permissions.py  routes.py  util.py
goosebit/db/: __init__.py  config.py  db.py  models.py  pg_ssl_context.py
goosebit/download/: routes.py
goosebit/plugins/: __init__.py
goosebit/realtime/: logs.py  routes.py
goosebit/schema/: devices.py  plugins.py  rollouts.py  software.py  updates.py  users.py
goosebit/settings/: __init__.py  args.py  const.py  schema.py
goosebit/storage/: __init__.py  base.py  filesystem.py  s3.py
goosebit/telemetry/: __init__.py  prometheus.py
goosebit/ui/: nav.py  routes.py
goosebit/updater/: manager.py  misc.py  routes.py  updates.py
goosebit/updates/: __init__.py  artifacts.py  swdesc.py  version.py
goosebit/users/: __init__.py
goosebit/util/: path.py  version.py
goosebit_forwarded_header/: index.html
goosebit_simple_stats/: index.html
migrations/models/: 0_20240711084150_init.py  1_20240712094019_update.py  2_20240712160819_default_value.py
plugins/goosebit_forwarded_header/: README.md  pyproject.toml
plugins/goosebit_forwarded_header/goosebit_forwarded_header/: __init__.py
plugins/goosebit_forwarded_header/goosebit_forwarded_header/middleware/: __init__.py  forwarded_header.py
plugins/goosebit_simple_stats/: README.md  pyproject.toml
plugins/goosebit_simple_stats/goosebit_simple_stats/: __init__.py
plugins/goosebit_simple_stats/goosebit_simple_stats/api/: routes.py
plugins/goosebit_simple_stats/goosebit_simple_stats/api/v1/: routes.py
plugins/goosebit_simple_stats/goosebit_simple_stats/api/v1/stats/: responses.py  routes.py
plugins/goosebit_simple_stats/goosebit_simple_stats/schema/: __init__.py  show.py
plugins/goosebit_simple_stats/goosebit_simple_stats/settings/: __init__.py  schema.py
plugins/goosebit_simple_stats/goosebit_simple_stats/ui/: routes.py
plugins/goosebit_simple_stats/goosebit_simple_stats/ui/bff/: __init__.py
plugins/goosebit_simple_stats/goosebit_simple_stats/ui/bff/stats/: routes.py
plugins/goosebit_simple_stats/goosebit_simple_stats/ui/static/: __init__.py
plugins/goosebit_simple_stats/goosebit_simple_stats/ui/static/js/: stats.js
plugins/goosebit_simple_stats/goosebit_simple_stats/ui/templates/: stats.html.jinja
quick_start/: index.html
search/: search_index.json
settings/: goosebit.yaml
tests/auth/: test_permissions.py
tests/e2e/: utils.py
tests/updater/: test_misc.py
tests/updates/: test_swdesc.py
tests/util/: test_version.py
(+139 files in other folders)
