[project]
name = "goosebit"
version = "0.2.10"
description = "A simplistic, opinionated remote update server implementing hawkBit™'s DDI API"
authors = [{ name = "Brett Rowan", email = "121075405+b-rowan@users.noreply.github.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi (>=0.116.1,<0.118.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "tortoise-orm (>=0.25.1,<0.26.0)",
    "aerich (>=0.9.1,<0.10.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "joserfc (>=1.2.2,<2.0.0)",
    "semver (>=3.0.4,<4.0.0)",
    "libconf (>=2.0.1,<3.0.0)",
    "opentelemetry-distro (>=0.57b0,<0.59)",
    "opentelemetry-instrumentation-fastapi (>=0.57b0,<0.59)",
    "opentelemetry-exporter-prometheus (>=0.57b0,<0.59)",
    "aiocache (>=0.12.3,<0.13.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings[yaml] (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.37.0)",
    "boto3 (>=1.40.8,<2.0.0)",
    "pysquashfsimage (>=0.9.0,<1.0.0)",
    "zstandard (>=0.24.0,<0.26.0)",
    "gunicorn>=24.1.1",
]

[project.optional-dependencies]
postgresql = ["asyncpg (>=0.30.0,<0.31.0)"]

[project.scripts]
generate-sample-data = "sample_data:main"

[dependency-groups]
dev = [
    "isort>=6.0.1,<7",
    "black>=25.1.0,<26",
    "pre-commit>=4.3.0,<5",
    "flake8==7.3.0",
    "mypy>=1.17.1,<2",
    "types-pyyaml>=6.0.12.20250809,<7",
    "faker>=37.5.3,<38",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.16,<10",
]
tests = [
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.1.0,<2",
    "pytest-md-report>=0.7.0,<0.8",
    "pytest_httpserver>=1.1.3,<2",
]
goosebit_simple_stats = ["goosebit-simple-stats"]
goosebit_forwarded_header = ["goosebit-forwarded-header"]

[tool.uv]
default-groups = [
    "dev",
    "docs",
    "tests",
    "goosebit_simple_stats",
    "goosebit_forwarded_header",
]

[tool.uv.sources]
goosebit-simple-stats = { path = "plugins/goosebit_simple_stats", editable = true }
goosebit-forwarded-header = { path = "plugins/goosebit_forwarded_header", editable = true }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest]
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.aerich]
tortoise_orm = "goosebit.db.config.TORTOISE_CONF"
location = "goosebit/db/migrations"
src_folder = "./goosebit"

[tool.mypy]
strict = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.djlint]
ignore = "H030,H031,H021"
