[project]
name = "goosebit"
version = "0.2.11"
description = "A simplistic, opinionated remote update server implementing hawkBit™'s DDI API"
authors = [{ name = "Brett Rowan", email = "121075405+b-rowan@users.noreply.github.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi",
    "python-multipart",
    "jinja2",
    "itsdangerous",
    "tortoise-orm",
    "aerich",
    "argon2-cffi",
    "joserfc",
    "semver",
    "libconf",
    "opentelemetry-distro",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-prometheus",
    "aiocache",
    "httpx",
    "pydantic-settings[yaml]",
    "uvicorn",
    "boto3",
    "pysquashfsimage(>=0.9.0,<1.0.0)",
    "zstandard (>=0.24.0,<0.26.0)",
]

[project.optional-dependencies]
postgresql = ["asyncpg (>=0.30.0,<0.31.0)"]

[project.scripts]
generate-sample-data = "sample_data:main"

[dependency-groups]
dev = [
    "faker>=40.1.2",
    "mypy>=1.19.1",
    "prek>=0.3.0",
    "ruff>=0.14.14",
    "types-pyyaml>=6.0.12.20250915",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]
tests = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpserver>=1.1.3",
    "pytest-md-report>=0.7.0",
]
goosebit_simple_stats = ["goosebit-simple-stats"]
goosebit_forwarded_header = ["goosebit-forwarded-header"]

[tool.uv]
default-groups = [
    "dev",
    "docs",
    "tests",
    "goosebit_simple_stats",
    "goosebit_forwarded_header",
]

[tool.uv.sources]
goosebit-simple-stats = { path = "plugins/goosebit_simple_stats", editable = true }
goosebit-forwarded-header = { path = "plugins/goosebit_forwarded_header", editable = true }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "YTT",
    #"B",
    "A",
    "T10",
    "EXE",
    "FIX",
    "FA",
    "INT",
    "ISC",
    "ICN",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "SLF",
    "SLOT",
    "TD",
    "FLY",
    "I",
    "N",
    #"PERF",
    "E",
    "W",
    "F",
    "PLE",
    "FURB",
]
ignore = [
    # Conflicting lint rules with ruff formater:
    "W191",  # tab-indentation
    "E111",  # indentation-with-invalid-multiple
    "E114",  # indentation-with-invalid-multiple-comment
    "E117",  # over-indented
    "D206",  # docstring-tab-indentation
    "D300",  # triple-single-quotes
    "Q000",  # bad-quotes-inline-string
    "Q001",  # bad-quotes-multiline-string
    "Q002",  # bad-quotes-docstring
    "Q003",  # avoidable-escaped-quote
    "COM812",  # missing-trailing-comma
    "COM819",  # prohibited-trailing-comma
    "E501",  # Line too long
]

[tool.aerich]
tortoise_orm = "goosebit.db.config.TORTOISE_CONF"
location = "goosebit/db/migrations"
src_folder = "./goosebit"

[tool.mypy]
strict = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.djlint]
ignore = "H030,H031,H021"
