[project]
name = "goosebit"
version = "0.2.12"
description = "A simplistic, opinionated remote update server implementing hawkBit™'s DDI API"
authors = [
    {name = "Brett Rowan", email = "121075405+b-rowan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.138.0)",
    "python-multipart (>=0.0.32)",
    "jinja2>=3.1.6",
    "itsdangerous>=2.2.0",
    "tortoise-orm (>=0.25.4,<1.0.0)",
    "aerich>=0.9.2",
    "argon2-cffi>=25.1.0",
    "joserfc (>=1.7.1)",
    "semver>=3.0.4",
    "libconf>=2.0.1",
    "opentelemetry-distro (>=0.63b1)",
    "opentelemetry-instrumentation-fastapi (>=0.63b1)",
    "opentelemetry-exporter-prometheus (>=0.63b1)",
    "aiocache>=0.12.3",
    "httpx>=0.28.1",
    "pydantic-settings[yaml] (>=2.14.2)",
    "uvicorn (>=0.49.0)",
    "boto3 (>=1.43.36)",
    "pysquashfsimage>=0.9.0",
    "zstandard (>=0.25.0)",
]

[project.optional-dependencies]
postgresql = ["asyncpg (>=0.30.0,<0.31.0)"]

[tool.poetry.group.dev.dependencies]
isort = "^8.0.1"
black = "^26.5.1"
pre-commit = "^4.6.0"
flake8 = "7.3.0"
mypy = "^2.1.0"
types-pyyaml = "^6.0.12.20260518"
faker = "^40.23.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"

[tool.poetry.group.tests.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
pytest-md-report = "^0.8.0"
pytest_httpserver = "^1.1.5"

[tool.poetry.group.goosebit_simple_stats.dependencies]
goosebit-simple-stats = {path = "plugins/goosebit_simple_stats", develop = true}

[tool.poetry.group.goosebit_forwarded_header.dependencies]
goosebit-forwarded-header = {path = "plugins/goosebit_forwarded_header", develop = true}

[project.scripts]
generate-sample-data = "sample_data:main"

[tool.pytest]
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.aerich]
tortoise_orm = "goosebit.db.config.TORTOISE_CONF"
location = "goosebit/db/migrations"
src_folder = "./goosebit"

[tool.mypy]
strict = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.djlint]
ignore = "H030,H031,H021"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
