[tool.poetry]
name = "example-plugin"
version = "1.0.0"
description = ""
authors = ["Upstream Data <brett@upstreamdata.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
goosebit = {path = "../.."}

[tool.poetry.plugins.'goosebit.plugins']
example_plugin-api = "example_plugin.api:router"
example_plugin-templates = "example_plugin.templates:loader"
example_plugin-ui = "example_plugin.ui:router"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
