[project]
name = "goosebit-simple-stats"
version = "0.1.1"
description = "gooseBit plugin showing some basic statistics"
authors = [
    {name = "Brett Rowan", email = "121075405+b-rowan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["goosebit"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.entry-points.'goosebit.plugins']
goosebit_simple_stats = "goosebit_simple_stats"

[tool.djlint]
ignore = "H030,H031,H021"

[tool.poetry.dependencies]
goosebit = {develop = true}
